--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yszln.advancedui">
+    package="com.yszln.advancedui" >
 
     <application
         android:allowBackup="true"
@@ -8,16 +8,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AdvancedUIKt">
-        <activity android:name=".givelike.GiveLikeActivity">
+        android:theme="@style/Theme.AdvancedUIKt" >
+        <activity android:name=".touch.ScrollViewActivity" >
+        </activity>
+        <activity android:name=".givelike.GiveLikeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".splash.SplashActivity">
-
+        <activity android:name=".splash.SplashActivity" >
         </activity>
     </application>
 
