--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AdvancedUIKt">
-        <activity android:name="com.yszln.advancedui.view.particleball.BallViewActivity"></activity>
-        <activity android:name=".view.ordershaft.OrderShaftActivity"/>
+        <activity android:name=".study.StudyActivity"></activity>
+        <activity android:name=".view.particleball.BallViewActivity" />
+        <activity android:name=".view.schedule.ScheduleActivity" />
         <activity android:name=".main.MainActivity" /> <!-- 微信雷达扫描效果 -->
-        <activity android:name="com.yszln.advancedui.view.radarscanning.WXRadarScanningActivity" />
-        <activity android:name="com.yszln.advancedui.view.touch.ScrollViewActivity" /> <!-- 仿花束直播点赞效果 -->
-        <activity android:name="com.yszln.advancedui.view.givelike.GiveLikeActivity" /> <!-- 六圆旋转扩散聚合效果 -->
+        <activity android:name=".view.radarscanning.WXRadarScanningActivity" />
+        <activity android:name=".view.touch.ScrollViewActivity" /> <!-- 仿花束直播点赞效果 -->
+        <activity android:name=".view.givelike.GiveLikeActivity" /> <!-- 六圆旋转扩散聚合效果 -->
         <activity android:name=".splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
