--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,16 @@
 buildscript {
     ext.kotlin_version = "1.3.61"
     repositories {
-        google()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+        maven { url "https://jitpack.io" }
+        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://repo1.maven.org/maven2/com/tencent/bugly' }
+        maven { url 'https://jcenter.bintray.com/com/tencent/bugly' }
         jcenter()
+        mavenCentral()
+        google()
+
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
@@ -16,8 +24,16 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+        maven { url "https://jitpack.io" }
+        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://repo1.maven.org/maven2/com/tencent/bugly' }
+        maven { url 'https://jcenter.bintray.com/com/tencent/bugly' }
         jcenter()
+        mavenCentral()
+        google()
+
+
     }
 }
 
